tests/ui_fail/overlapping.stderr
error[E0119]: conflicting implementations of trait `Kita` for type `&_`
  --> tests/ui_fail/overlapping.rs:11:1
   |
11 | / disjoint_impls! {
12 | |     pub trait Kita {
13 | |         const NAME: &'static str;
...  |
25 | | }
   | | ^
   | | |
   | |_first implementation here
   |   conflicting implementation for `&_`
   |
   = note: downstream crates may implement trait `Dispatch` for type `&_`
   = note: downstream crates may implement trait `_::Kita0<<&_ as Dispatch>::Group>` for type `&_`
   = note: this error originates in the macro `disjoint_impls` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Kita` for type `&mut _`
  --> tests/ui_fail/overlapping.rs:11:1
   |
11 | / disjoint_impls! {
12 | |     pub trait Kita {
13 | |         const NAME: &'static str;
...  |
25 | | }
   | | ^
   | | |
   | |_first implementation here
   |   conflicting implementation for `&mut _`
   |
   = note: downstream crates may implement trait `Dispatch` for type `&mut _`
   = note: downstream crates may implement trait `_::Kita0<<&mut _ as Dispatch>::Group>` for type `&mut _`
   = note: this error originates in the macro `disjoint_impls` (in Nightly builds, run with -Z macro-backtrace for more info)
